welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: '=' expected but ';' found.
var d
^nearHundred:5: error: '=' expected but ';' found.
p = 100 - n 
^