welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
var p 
var d

p = 100 - n 
d = 200 - n 

if (Math.abs(p) < 11 )
{
	true
}
else if (Math.abs(d) < 11 )
{
	true
}
else false

}